<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.voice_search.VoiceSearchScreen">

    <TextView
        android:id="@+id/container_bottom"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="#29008C4D"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container_bottom"
        android:background="@drawable/bg_voice_search_top_container"
        android:layout_marginBottom="-30dp"/>


    <ImageView
        android:id="@+id/btn_transfer_voice_lang"
        android:layout_width="32dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/ic_transfer_voice_lang"
        app:layout_constraintTop_toBottomOf="@id/top_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="36dp"
        app:tint="@color/my_primary_color"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/left_lang"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_transfer_voice_lang"
        app:layout_constraintTop_toTopOf="@id/btn_transfer_voice_lang"
        app:layout_constraintBottom_toBottomOf="@id/btn_transfer_voice_lang"
        app:cardCornerRadius="16dp"
        android:layout_marginHorizontal="16dp">


        <TextView
            android:id="@+id/tv_lang1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/english"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:textStyle="bold"
            />

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/right_lang"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_transfer_voice_lang"
        app:layout_constraintTop_toTopOf="@id/btn_transfer_voice_lang"
        app:layout_constraintBottom_toBottomOf="@id/btn_transfer_voice_lang"
        app:cardCornerRadius="16dp"
        android:layout_marginHorizontal="16dp">


        <TextView
            android:id="@+id/tv_lang2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/uzbek"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:textStyle="bold"
            />

    </androidx.cardview.widget.CardView>



    <ImageView
        android:id="@+id/btn_microphone"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:src="@drawable/ic_search_microphone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/container_bottom"
        android:layout_marginBottom="40dp"
        android:padding="28dp"
        android:background="@drawable/bg_circle_microphone"
        android:clickable="true"
        tools:ignore="MissingConstraints"
        android:focusable="true" />


    <TextView
        android:id="@+id/container_lang1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_voice_search_item"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/top_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.30"
        tools:layout_editor_absoluteX="16dp"
        android:text="@string/salom"
        android:fontFamily="@font/roboto_medium"/>



    <TextView
        android:id="@+id/container_lang2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_voice_search_item"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/top_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        tools:layout_editor_absoluteX="16dp"
        android:text="@string/hello"
        android:fontFamily="@font/roboto_medium"
        />


    <TextView
        android:id="@+id/voice_search_title"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/my_primary_color"
        android:text="@string/voice_search"
        android:gravity="center"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:textSize="22sp"/>


    <ImageView
        android:id="@+id/ic_back_btn"
        android:layout_width="56dp"
        android:layout_height="0dp"
        android:src="@drawable/round_arrow_back_24"
        app:tint="@color/white"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="@id/voice_search_title"
        app:layout_constraintBottom_toBottomOf="@id/voice_search_title"
        app:layout_constraintStart_toStartOf="parent"
        android:background="?selectableItemBackgroundBorderless"
        android:backgroundTint="@android:color/transparent"
        android:padding="14dp"
        android:layout_marginHorizontal="4dp"
        />


    <TextView
        android:id="@+id/tv_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_only_one_word"
        app:layout_constraintBottom_toBottomOf="@id/top_container"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>